# electronics_retail_chain

./: .coveragerc  .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
core/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_c33ca9c031f1b551_models_py.html  z_c33ca9c031f1b551_serializers_py.html  z_c33ca9c031f1b551_views_py.html  z_f6c68bdc9becfc1e_email_py.html  z_f6c68bdc9becfc1e_models_py.html
nginx/: default.conf
products/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_description.py  0003_alter_product_release_date.py
suppliers/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  services.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
tests/: tests_poduct.py  tests_supplier.py  tests_user.py
users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
users/templates/djoser/email/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html  username_changed_confirmation.html  username_reset.html
